[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Common/Menus/SettingsMenu/General/general_settings.gd" type="Script" id=1]
[ext_resource path="res://Game/Common/Menus/SettingsMenu/common_category.tscn" type="PackedScene" id=2]

[node name="GeneralSettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="LanguageCategory" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_vertical = 1
CATEGORY_NAME = "settings_general_language"

[node name="LanguageHBox" type="HBoxContainer" parent="LanguageCategory"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LanguageLabel" type="Label" parent="LanguageCategory/LanguageHBox"]
margin_top = 3.0
margin_right = 216.0
margin_bottom = 17.0
text = "settings_general_language_setting"

[node name="LanguageOptions" type="OptionButton" parent="LanguageCategory/LanguageHBox"]
margin_left = 220.0
margin_right = 249.0
margin_bottom = 20.0
